2013-03-27  Geoffrey Garen  <ggaren@apple.com>

        Removed some dead code in the DFG bytecode parser
        https://bugs.webkit.org/show_bug.cgi?id=113472

        Reviewed by Sam Weinig.

        Now that Phi creation and liveness analysis are separate passes, we can
        remove the vestiges of code that used to do that in the bytecode
        parser.

        * dfg/DFGByteCodeParser.cpp:
        (ByteCodeParser):
        (JSC::DFG::ByteCodeParser::addToGraph):
        (JSC::DFG::ByteCodeParser::parse):

2013-03-27  Filip Pizlo  <fpizlo@apple.com>

        JIT and DFG should NaN-check loads from Float32 arrays
        https://bugs.webkit.org/show_bug.cgi?id=113462
        <rdar://problem/13490804>

        Reviewed by Mark Hahnenberg.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compileGetByValOnFloatTypedArray):
        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::emitFloatTypedArrayGetByVal):

2013-03-27  Mark Hahnenberg  <mhahnenberg@apple.com>

        CodeCache::m_capacity can becoming negative, producing undefined results in pruneSlowCase
        https://bugs.webkit.org/show_bug.cgi?id=113453

        Reviewed by Geoffrey Garen.

        * runtime/CodeCache.cpp:
        (JSC::CodeCacheMap::pruneSlowCase): We make sure that m_minCapacity doesn't drop below zero now.
        This prevents m_capacity from doing the same.

2013-03-27  Filip Pizlo  <fpizlo@apple.com>

        DFG should use CheckStructure for typed array checks whenever possible
        https://bugs.webkit.org/show_bug.cgi?id=113374

        Reviewed by Geoffrey Garen.
        
        We used to do the right thing, but it appears that this regressed at some point. Since the
        FixupPhase now has the ability to outright remove spurious CheckStructures on array
        operations, it is profitable for the ByteCodeParser to insert CheckStructures whenver there